2024-06-12 Ismael Luceno <ismael@sourcemage.org>
	* BUILD, DEPENDS, DETAILS, INSTALL, PRE_BUILD,
	  patches/0001-Define-_POSIX_C_SOURCE-to-expose-popen-pclose.patch:
	  spell created